Banner fix Added header-container div to index.html Updated styles.css to fix banner spacing/alignment.

--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,31 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.header {
+/* ---- Header ---- */
+.header-container {
+    display: flex;
     background-color: #1F2937;
+    justify-content: center;
+}
+
+.header {
+    
     padding: 25px;
     display: flex;
     justify-content: space-between;
-
+    width: 1050px;
 }
 
 .logo {
     font-weight: bold;
     color: #F9F1F8;
     font-size: 24px;
+    
 }
 
 ul {
    list-style: none;
-    color: #e5e7eb;
+   color: #e5e7eb;
    font-size: 18px;
    display: flex;
    gap: 20px;
